--- a/index.html
+++ b/index.html
@@ -1,38 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Country & Public Holidays API</title>
-    <link rel="stylesheet" href="index.css" />
-  </head>
-  <body>
-    <!-- Navbar -->
-    <navbar id="navbar">
-      <!-- Links -->
-      <a href="index.html">Country</a>
-      <a href="holiday.html">Holidays</a>
-      <a href="https://www.nationsonline.org/oneworld/country_code_list.htm" target="_blank">Country Codes</a>
-    </navbar>
-    <!-- Header -->
-    <header id="header">
-      <h1>Country Information</h1>
-      <h3>View the information of different countries</h3>
-    </header>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Country & Public Holidays API</title>
+        <link rel="stylesheet" href="index.css" />
+    </head>
+    <body>
+        <!-- Navbar -->
+        <navbar id="navbar">
+            <!-- Links -->
+            <a href="index.html">Country</a>
+            <a href="holiday.html">Holidays</a>
+            <a
+                href="https://www.nationsonline.org/oneworld/country_code_list.htm"
+                target="_blank"
+                rel="noreferrer"
+                >Country Codes</a
+            >
+        </navbar>
+        <!-- Header -->
+        <header id="header">
+            <h1>Country Information</h1>
+            <h3>View the information of different countries</h3>
+        </header>
 
-    <!-- Main Section -->
-    <section id="main">
-      <h2>Search for Country</h2>
-      <!-- Input fields -->
-      <input id="searchCountry" type="text" placeholder="Country Code" />
-      <input id="getCountry" type="button" value="Search" />
-      <div id="resultBox"></div>
-    </section>
-    <!-- Footer -->
-    <footer id="footer">
-      <p>Joacim Strandvide - CountryAPI</p>
-    </footer>
-    <script src="index.js"></script>
-  </body>
+        <!-- Main Section -->
+        <section id="main">
+            <!-- Input fields -->
+            <input id="searchCountry" type="text" placeholder="Country Code" />
+            <input id="getCountry" type="button" value="Search" />
+            <div id="resultBox"></div>
+        </section>
+        <!-- Footer -->
+        <footer id="footer">
+            <p>Joacim Strandvide</p>
+        </footer>
+        <script src="index.js"></script>
+    </body>
 </html>
